# relrc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: mpi.rs  mpi.rs_disabled
src/: ancestor_graph.rs  detached.rs  edge.rs  graph_view.rs  hash_id.rs  history.rs  lib.rs  node.rs  petgraph.rs  registry.rs  resolver.rs  serialization.rs
src/detached/: mpi.rs
src/detached/mpi/: mpi_types.rs  msg_types.rs  send_recv.rs
src/graph_view/: map.rs  serde.rs  serialization.rs
src/graph_view/snapshots/: relrc__graph_view__serde__tests__serialization.snap  relrc__graph_view__serialization__tests__serialization.snap
src/petgraph/: edge_ref.rs
src/snapshots/: relrc__history__tests__history_graph_serialization.snap  relrc__serialization__tests__relrc_serialization.snap  relrc__serialization__tests__relrc_with_multiple_parents_serialization.snap  relrc__serialization__tests__relrc_with_parents_serialization.snap  relrc__serialization__tests__two_parents_two_children.snap
