[package]
name = "relrc"
version = "0.4.5"
edition = "2021"
rust-version = "1.81"
description = "Reference counted pointers, with relationships to other pointers."
keywords = ["arc", "rc", "reference-counting", "mpi"]
categories = ["concurrency", "memory-management", "rust-patterns"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/relrc/"
homepage = "https://github.com/lmondada/relrc"
repository = "https://github.com/lmondada/relrc"

[dependencies]
derive-where = "1.2.7"
derive_more = "0.99.18"
fxhash = "0.2.1"
# mpi = { version = "0.8.0", optional = true }
petgraph = { version = ">= 0.6.5, < 0.9", default-features = false, optional = true }
serde = { version = "1.0.204", optional = true, features = ["derive"] }
thiserror = "1.0.63"
itertools = "0.13.0"
# futures = { version = "0.3.31", optional = true, default-features = false, features = [
#     "executor",
# ] }

[features]
petgraph = ["dep:petgraph"]
serde = ["dep:serde"]
# mpi = ["dep:mpi", "dep:futures"]

[dev-dependencies]
insta = "1.39.0"
rstest = "0.22.0"
serde_json = "1.0.122"
