[package]
name = "relrc"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
description = "Reference counted pointers, with relationships to other pointers."
keywords = ["arc", "rc", "reference-counting", "mpi"]
categories = ["concurrency", "memory-management", "rust-patterns"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/relrc/"
homepage = "https://github.com/lmondada/relrc"
repository = "https://github.com/lmondada/relrc"

[dependencies]
derive-where = "1.2.7"
derive_more = "0.99.18"
# mpi = { version = "0.8.0", optional = true }
petgraph = { version = ">= 0.6.5, < 0.9", default-features = false, optional = true }
serde = { version = "1.0.204", optional = true, features = ["derive"] }
# TODO: use main slotmap once https://github.com/orlp/slotmap/pull/133 is merged
slotmap_fork_lmondada = { version = "1.0.8" }
thiserror = "1.0.63"
itertools = "0.13.0"
rustc-hash = "2.1.1"
# futures = { version = "0.3.31", optional = true, default-features = false, features = [
#     "executor",
# ] }

[features]
petgraph = ["dep:petgraph"]
serde = ["dep:serde", "slotmap_fork_lmondada/serde"]
# mpi = ["dep:mpi", "dep:futures"]

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
rstest = "0.22.0"
serde_json = "1.0.122"
